--- a/crab/index.html
+++ b/crab/index.html
@@ -15,7 +15,7 @@
         <img src="crab.png" id="crab">
     </div>
 
-    <script src="lib/utils.js"></script>
+    <script src="lib/vector-utils.js"></script>
     <script src="lib/point.js"></script>
     <script src="lib/vector.js"></script>
     <script src="lib/gameloop.js"></script>
