--- a/crab/index.html
+++ b/crab/index.html
@@ -19,6 +19,9 @@
     <body>
         <div id="game">
             <img src="crab.png" id="crab" />
+            <div class="moustache-wrapper">
+                <img src="moustache.png" class="moustache" />
+            </div>
         </div>
         <div class="absolute right-4 top-4 bg-slate-300/50 p-2 rounded border shadow font-sans">
             <table>
