--- a/crab/index.html
+++ b/crab/index.html
@@ -30,11 +30,7 @@
                         <label for="debug-toggle" class="block">Debug?</label>
                     </td>
                     <td>
-                        <input
-                            id="debug-toggle"
-                            type="checkbox"
-                            oninput="toggleDebug(this)"
-                        />
+                        <input id="debug-toggle" type="checkbox" oninput="toggleDebug(this)" />
                     </td>
                 </tr>
                 <tr class="stat" hidden>
@@ -68,9 +64,11 @@
             <script src="lib/gameloop.js"></script>
             <script src="lib/stack.js"></script>
             <script src="lib/time-frequency-counter.js"></script>
+            <script src="ext/perlin.js"></script>
             <script src="character.js"></script>
             <script src="rectangle.js"></script>
             <script src="projectile.js"></script>
+            <script src="bubble.js"></script>
             <script src="game.utils.js"></script>
             <script src="game.js"></script>
         </div>
