--- a/crab/index.html
+++ b/crab/index.html
@@ -76,6 +76,7 @@
             <script src="game/projectile.js"></script>
             <script src="game/utils.js"></script>
             <script src="game/collision-monitor.js"></script>
+            <script src="game/lobster.js"></script>
             
             <script src="game.js"></script>
         </div>
