--- a/crab-phaser/index.html
+++ b/crab-phaser/index.html
@@ -19,6 +19,7 @@
     </head>
     <body>
         <script src="utils.js"></script>
+        <script src="lobster.js"></script>
         <script src="game.js"></script>
     </body>
 </html>
