--- a/js-template/index.html
+++ b/js-template/index.html
@@ -77,7 +77,7 @@
     <script>
         window.addEventListener("load", async () => {
 
-            await loadTemplatesFromUrl("/templates.html");
+            await loadTemplatesFromUrl("/js-template/templates.html");
             
             templates = getTemplates();
             console.log("templates:", templates);
