--- a/js-template/index.html
+++ b/js-template/index.html
@@ -129,7 +129,11 @@
             if (location.hostname == "akinuri.github.io") {
                 templates_url = "/js-template" + templates_url;
             }
-            await loadTemplatesFromUrl(templates_url);
+            document.body.append(
+                ...htmlFromString(
+                    await fetchHtmlFromUrl(templates_url)
+                )
+            );
 
             templates = getTemplates();
             console.log("templates:", templates);
