--- a/js-template/01_use_plain_html.html
+++ b/js-template/01_use_plain_html.html
@@ -46,7 +46,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
