--- a/js-template/02_pass_content.html
+++ b/js-template/02_pass_content.html
@@ -35,7 +35,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
