--- a/js-template/03_pass_attr.html
+++ b/js-template/03_pass_attr.html
@@ -48,7 +48,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
