--- a/js-template/04_nested_placeholders.html
+++ b/js-template/04_nested_placeholders.html
@@ -80,7 +80,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
