--- a/js-template/05_run_js.html
+++ b/js-template/05_run_js.html
@@ -85,7 +85,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
