--- a/js-template/06_pass_prop.html
+++ b/js-template/06_pass_prop.html
@@ -97,7 +97,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
