--- a/js-template/index.html
+++ b/js-template/index.html
@@ -47,7 +47,7 @@
 
     </main>
 
-    <script src="../dist/template.js"></script>
+    <script src="template.js"></script>
     <script src="demo.js"></script>
 
 </body>
